--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule (.*) index.php [QSA,L]
+RewriteCond %{REQUEST_URI} !(^/Images/)
